fixed tooltip gets cut off for components

--- a/pwa/src/templates/templateParts/layerAccordion/LayerAccordionTemplate.module.css
+++ b/pwa/src/templates/templateParts/layerAccordion/LayerAccordionTemplate.module.css
@@ -1,3 +1,7 @@
 .containerInactive {
   opacity: var(--web-app-layer-accordion-inactive-opacity);
 }
+
+.collapsibleContainer > div > * {
+	overflow: visible !important;
+}
